--- a/assets/sass/0-settings/_color-scheme.scss
+++ b/assets/sass/0-settings/_color-scheme.scss
@@ -4,7 +4,7 @@
   --brand-color: #533feb;
   --white: #fff;
   --light-gray: #f0f0f0;
-  --gray: #6a6d76;
+  --gray: #cbcbcb;
   --dark: #0c101a;
   --dark-blue: #1e2740;
 
